deploy/deployment.yml
---  
apiVersion: v1
kind: ConfigMap
metadata:
  name: envoy
  namespace: blockvisor
data:
  config.yaml: | 
    admin:
      access_log_path: /tmp/admin_access.log
      address:
        socket_address: { address: 0.0.0.0, port_value: 9901 }

    static_resources:
      listeners:
        - name: listener_0
          address:
            socket_address: { address: 0.0.0.0, port_value: 8080 }
          filter_chains:
            - filters:
              - name: envoy.filters.network.http_connection_manager
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                  codec_type: auto
                  stat_prefix: ingress_http
                  route_config:
                    name: local_route
                    virtual_hosts:
                      - name: local_service
                        domains: ["*"]
                        routes:
                          - match: { prefix: "/" }
                            route:
                              cluster: bv_service
                              timeout: 0s
                              max_stream_duration:
                                grpc_timeout_header_max: 0s
                        cors:
                          allow_origin_string_match:
                            - prefix: "*"
                          allow_credentials: true
                          allow_methods: GET, PUT, DELETE, POST, OPTIONS
                          allow_headers: set-cookie, authorization, keep-alive,user-agent,cache-control,content-type,content-transfer-encoding,x-accept-content-transfer-encoding,x-accept-response-streaming,x-user-agent,x-grpc-web,grpc-timeout
                          max_age: "1728000"
                          expose_headers: set-cookie, grpc-status,grpc-message
                  http_filters:
                    - name: envoy.filters.http.grpc_web
                      typed_config:
                        "@type": type.googleapis.com/envoy.extensions.filters.http.grpc_web.v3.GrpcWeb
                    - name: envoy.filters.http.cors
                      typed_config:
                        "@type": type.googleapis.com/envoy.extensions.filters.http.cors.v3.Cors
                    - name: envoy.filters.http.router
                      typed_config:
                        "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
      clusters:
        - name: bv_service
          connect_timeout: 0.25s
          type: logical_dns
          http2_protocol_options: {}
          lb_policy: round_robin
          # win/mac hosts: Use address: host.docker.internal instead of address: localhost in the line below
          load_assignment:
            cluster_name: cluster_0
            endpoints:
              - lb_endpoints:
                - endpoint:
                    address:
                      socket_address:
                        address: bv
                        port_value: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: envoy
  namespace: blockvisor
  labels:
    app: envoy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: envoy
  template:
    metadata:
      name: envoy
      labels:
        app: envoy
    spec:
      containers:
      - name: envoy
        image: envoyproxy/envoy:v1.23-latest
        volumeMounts:
        - name: config-volume
          mountPath: /etc/envoy/envoy.yaml
          subPath: config.yaml
        ports:
        - name: proxy-port
          containerPort: 8080
        - name: admin-port
          containerPort: 9901
      volumes:
      - name: config-volume
        configMap:
            name: envoy
---
apiVersion: v1
kind: Service
metadata:
  name: envoy
  namespace: blockvisor
  annotations:
    service.beta.kubernetes.io/do-loadbalancer-protocol: https
    service.beta.kubernetes.io/do-loadbalancer-certificate-id: "23b42f2d-9d0b-418a-b3e0-f9ab24752439"
    service.beta.kubernetes.io/do-loadbalancer-http2-ports: "443"
    service.beta.kubernetes.io/do-loadbalancer-name: bv-api
spec:
  type: LoadBalancer
  selector:
    app: envoy
  ports:
    - protocol: TCP
      port: 443
      targetPort: 8080
---
apiVersion: v1
kind: ConfigMap
metadata:
  name: spec
  namespace: blockvisor
data:
  DB_MAX_CONN: "20"
  RUST_LOG: "debug"
  CASBIN_MODEL: /etc/api/conf/model.conf
  CASBIN_POLICIES: /etc/api/conf/policies.csv
  BIDI_BUFFER_SIZE: "128"
  TOKEN_EXPIRATION_MINS_USER: "10"
  TOKEN_EXPIRATION_MINS_HOST: "525600"
  REFRESH_TOKEN_EXPIRATION_MINS_USER: "1200"
  PWD_RESET_TOKEN_EXPIRATION_MINS_USER: "5"
  REFRESH_EXPIRATION_MINS_HOST: "525600"
  REGISTRATION_CONFIRMATION_MINS_USER: "30"
  INVITATION_MINS_USER: "10080"
  INTERNAL_BUFFER_SIZE: "128"
  PAGINATION_MAX_ITEMS: "10"
  REQUEST_CONCURRENCY_LIMIT: "128"
  SENDGRID_API_KEY: "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"
  UI_BASE_URL: "https://app.alpha.blockvisor.dev"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bv-api
  namespace: blockvisor
  labels:
    app: blockvisor
    db: stakejoy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: blockvisor
      db: stakejoy
  template:
    metadata:
      name: bv-api
      labels:
        app: blockvisor
        db: stakejoy
    spec:
      containers:
      - name: blockvisor-api
        image: <IMAGE>
        ports:
        - name: listener-port
          containerPort: 8080
        envFrom:
        - configMapRef:
            name: spec
        - secretRef:
            name: db
        - secretRef:
            name: jwt
        - secretRef:
            name: api
        - secretRef:
            name: pwdreset
        - secretRef:
            name: pwdrefresh
        - secretRef:
            name: pwdconfirm
---
apiVersion: v1
kind: Service
metadata:
  name: bv
  namespace: blockvisor
spec:
  selector:
    app: blockvisor
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
---
